fix(gemini-logo): resolve blurry Google Gemini logo issue in Safari

--- a/src/components/ui/badge/badge.scss
+++ b/src/components/ui/badge/badge.scss
@@ -120,8 +120,11 @@
     user-select: none;
     -webkit-user-select: none;
     pointer-events: none;
+    display: inline-block;
 
     &--gemini-logo {
+      min-width: px-to-rem(34px);
+      max-width: px-to-rem(34px);
       margin-top: -4px;
     }
   }
